--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "^13.5.3",
     "framer-motion": "^10.16.4",
+    "github-slugger": "^2.0.0",
     "next": "^13.5.3",
     "next-contentlayer": "^0.3.4",
     "postcss": "8.4.30",
@@ -26,6 +27,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
     "reading-time": "^1.5.0",
+    "rehype-autolink-headings": "^7.0.0",
+    "rehype-pretty-code": "^0.10.1",
+    "rehype-slug": "^6.0.0",
+    "remark-gfm": "^3.0.1",
+    "shiki": "^0.14.4",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
