--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-config-next": "^13.5.3",
     "framer-motion": "^10.16.4",
     "github-slugger": "^2.0.0",
+    "locomotive-scroll": "^5.0.0-beta.8",
     "next": "^13.5.3",
     "next-contentlayer": "^0.3.4",
     "postcss": "8.4.30",
@@ -39,6 +40,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10"
+    "@tailwindcss/typography": "^0.5.10",
+    "@types/locomotive-scroll": "^4.1.1"
   }
 }
