--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@dotlottie/react-player": "^1.6.1",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@nextui-org/react": "^2.1.13",
     "@supabase/auth-helpers-nextjs": "^0.8.1",
     "@supabase/supabase-js": "^2.38.0",
@@ -23,6 +25,7 @@
     "eslint-config-next": "^13.5.3",
     "framer-motion": "^10.16.4",
     "github-slugger": "^2.0.0",
+    "gsap": "^3.12.2",
     "locomotive-scroll": "^5.0.0-beta.8",
     "next": "^13.5.3",
     "next-contentlayer": "^0.3.4",
@@ -30,12 +33,14 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.46.2",
+    "react-icons": "^4.11.0",
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.0.0",
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
     "shiki": "^0.14.4",
+    "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
   },
