--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "rehype-pretty-code": "^0.10.1",
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
+    "sass": "^1.69.2",
     "shiki": "^0.14.4",
     "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
