--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "rehype-slug": "^6.0.0",
     "remark-gfm": "^3.0.1",
     "sass": "^1.69.2",
+    "sharp": "^0.32.6",
     "shiki": "^0.14.4",
     "swiper": "^10.3.1",
     "tailwindcss": "3.3.3",
